Ensure the cat tabs don't collapse with long text.

--- a/packages/edit-site/src/components/style-book/style.scss
+++ b/packages/edit-site/src/components/style-book/style.scss
@@ -18,6 +18,10 @@
 }
 
 .edit-site-style-book__tabs {
+	[role="tab"] {
+		white-space: nowrap;
+	}
+
 	[role="tablist"] {
 		background: $white;
 		color: $gray-900;
